feat(application): 헥사고날 포트 분리와 알림·OAuth 흐름 확장
- client/admin/internal 유스케이스와 external/persistence 포트 경계 재정렬
- 알림 아웃박스, FCM 발송, Redis pub/sub 기반 이벤트 처리 흐름 정비
- Google OAuth 로그인과 사용자 생성/토큰 발급 협력 포트 추가
- 로컬 리소스 설정 파일을 Git 추적 대상에서 제외